# company1-auth-service

./: .bandit  .coverage  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  skaffold.yaml
.github/workflows/: ci.yml
k8s/: deployment.yaml
tests/: __init__.py  conftest.py  test_auth_endpoints.py  test_database.py  test_security.py
