[project]
name = "auth-service"
version = "0.1.0"
description = "Company1 Authentication Service"
requires-python = ">=3.11"
dependencies = []

# =============================================================================
# Code Quality Configuration (Black + isort compatibility)
# =============================================================================

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["main"]

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",  # whitespace before ':' (Black handles this)
    "W503",  # line break before binary operator (Black handles this)
    "F401",  # imported but unused (allow in test files)
    "F841",  # local variable assigned but never used (allow in test files)
    "E402",  # module level import not at top of file (allow in test files)
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
]
per-file-ignores = [
    "tests/*:F401,F841,E402,E501",  # More lenient for test files
] 